--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,9 @@
   <div class= "row">
       <div class= "col-xs-12">
           <app-header></app-header>
+          <br>
+          <app-confirmation></app-confirmation>
       </div>
       
   </div>
-</div>    
+</div>   
