--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
           <br>
           <app-confirmation></app-confirmation>
       </div>
-      
   </div>
-</div>   
+</div>  
+
+<router-outlet></router-outlet>
