--- a/src/app/search-buses/search-buses.component.html
+++ b/src/app/search-buses/search-buses.component.html
@@ -11,9 +11,9 @@
             
             </div>
             <div class="form-group col-md-4">
-                <label for="name" >Going To</label>
+                <label for="name1" >Going To</label>
 
-                <input type="text" id="name" name="name" required>
+                <input type="text" id="name1" name="name1" required>
             </div>
           </div>
           <div class="row">
